objects/Job__c.object
<CustomObject>
    <description>The entity used to identify a work request from a client to the Bureau.</description>
    <fields>
        <fullName>Account_BU__c</fullName>
        <formula>CASE(TEXT(Account__r.BU__c),&apos;Belgium SPS - BE5&apos;,&apos;Belgium - BE5&apos;, &apos;France SPS - FR5&apos;, &apos;France - FR5&apos;,&apos;Netherlands SPS - NL5&apos;,&apos;Netherlands - NL5&apos;,&apos;US - US1&apos;, &apos;US - US5&apos;, TEXT(Account__r.BU__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>D Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phoenix_Indicator__c</fullName>
        <description>This field displays the Account Phoenix Status in the form of an image.</description>
        <formula>Account__r.Phoenix_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an indicator of the Account Status as per the Phoenix Business Rules.</inlineHelpText>
        <label>Trading Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phoenix_Message__c</fullName>
        <description>This field shows the final message generated by the Phoenix Business Rules as per the following criteria: 
If the Red Message is not blank, it shows the Red Message else it checks the Amber Message. 
If the Amber Message is not blank, it shows the Amber Message else it shows the Green Message.</description>
        <formula>Account__r.Phoenix_Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the Status Message generated by the Phoenix Business Rules</inlineHelpText>
        <label>Trading Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up existing SFDC accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N20000000oB15EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Count_of_Candidates_PassFail__c</fullName>
        <description>It is used to capture (Sum of candidates with Status as Completed) Or (Sum of candidates with status Pass or Fail)</description>
        <label>Actual Count of Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Count_of_Candidates__c</fullName>
        <description>Roll-Up of child Jobs &quot;Number of Candidates Uploaded&quot; field.</description>
        <label>Total Candidate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Language_New__c</fullName>
        <description>It is used to select region specific language for candidate assessment.</description>
        <label>Assessment Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Telugu</fullName>
                </value>
                <value>
                    <fullName>Punjabi</fullName>
                </value>
                <value>
                    <fullName>Odia</fullName>
                </value>
                <value>
                    <fullName>Manipuri</fullName>
                </value>
                <value>
                    <fullName>Marathi</fullName>
                </value>
                <value>
                    <fullName>Malayalam</fullName>
                </value>
                <value>
                    <fullName>Kannada</fullName>
                </value>
                <value>
                    <fullName>Gujarati</fullName>
                </value>
                <value>
                    <fullName>Assamesse</fullName>
                </value>
                <value>
                    <fullName>Dogri</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>Tamil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Language__c</fullName>
        <label>Assessment Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Profile_Name__c</fullName>
        <label>Assessment Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_Jobs__c</fullName>
        <label>Associated Jobs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Authorized_Buyer__c</fullName>
        <label>Authorized Buyer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abu Dhabi - AD1</fullName>
                </value>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France - FR1</fullName>
                </value>
                <value>
                    <fullName>France - FR5</fullName>
                </value>
                <value>
                    <fullName>Germany SPS - DE5</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>SHL Previsor - P10</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia - SA5</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BannerImage__c</fullName>
        <label>BannerImage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <externalId>true</externalId>
        <label>Batch Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Billing_Cycle_End_Date__c</fullName>
        <description>System Use: For repeatable work request cycle end date</description>
        <inlineHelpText>System Use: For repeatable work request cycle end date</inlineHelpText>
        <label>Billing Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle_Start_Date__c</fullName>
        <description>User input: For repeatable work request cycle start date</description>
        <inlineHelpText>User input: For repeatable work request cycle start date</inlineHelpText>
        <label>Billing Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <description>System Use: Capture the billing frequency of MSA signed with Client</description>
        <inlineHelpText>System Use: Capture the billing frequency of MSA signed with Client</inlineHelpText>
        <label>Billing Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <inlineHelpText>CC Report Recipient Email Address Only</inlineHelpText>
        <label>CC</label>
        <length>34000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CancelledBy__c</fullName>
        <label>Cancelled By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelledOn__c</fullName>
        <label>Cancelled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CandidateNames__c</fullName>
        <description>Details of sample names recorded for the bureau job</description>
        <label>Candidate Names</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Candidate_Count__c</fullName>
        <formula>Number_of_Participants_New__c  +  Number_of_Respondents_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Ratings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Max_Sequence_No_New__c</fullName>
        <description>&quot;This field is created on the place of old Candidate Max Sequence field while Relationship conversion. 
Number of Candidates uploaded on Job.&quot;</description>
        <label>Number of Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Transfer_Status__c</fullName>
        <defaultValue>&quot;Not Sent to FTP&quot;</defaultValue>
        <description>This field is created to store Overall transfer satus of ratings related to Job. Transfer status is related to transfer to FTP.</description>
        <label>Candidate Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent to FTP</fullName>
                    <label>Not Transferred to FTP</label>
                </value>
                <value>
                    <fullName>Ready to transfer</fullName>
                    <label>Ready to Transfer</label>
                </value>
                <value>
                    <fullName>Sent to FTP</fullName>
                    <label>Transferred to FTP</label>
                </value>
                <value>
                    <fullName>Sent to FTP with error</fullName>
                    <label>Partial Transfer to FTP / Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Username_Prefix__c</fullName>
        <description>This field is meant for specifying a 4-character text that shall be used as a prefix of the usernames generated for the candidates of a Job.</description>
        <inlineHelpText>Specify the username prefix for all candidates of this Job.</inlineHelpText>
        <label>Candidate Username Prefix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Content_Version_Ids_For_Export__c</fullName>
        <description>This field is used to capture Content Version Ids for candidate bulk export</description>
        <label>Capture Content Version Ids For Export</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career_Guidance_Username__c</fullName>
        <label>Career Guidance Username</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This field is used to store the value of city selected by user</description>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABHAYAPURI</fullName>
                </value>
                <value>
                    <fullName>ACHAMPET</fullName>
                </value>
                <value>
                    <fullName>ADAMPUR MANDI</fullName>
                </value>
                <value>
                    <fullName>ADHAURA</fullName>
                </value>
                <value>
                    <fullName>ADILABAD</fullName>
                </value>
                <value>
                    <fullName>ADONI</fullName>
                </value>
                <value>
                    <fullName>AFZALPUR</fullName>
                </value>
                <value>
                    <fullName>AHMEDABAD LOCAL</fullName>
                </value>
                <value>
                    <fullName>AHWA</fullName>
                </value>
                <value>
                    <fullName>AINAPUR</fullName>
                </value>
                <value>
                    <fullName>AKHNOOR</fullName>
                </value>
                <value>
                    <fullName>ALAMPUR</fullName>
                </value>
                <value>
                    <fullName>ALAND</fullName>
                </value>
                <value>
                    <fullName>ALLAGADDA</fullName>
                </value>
                <value>
                    <fullName>ALONG</fullName>
                </value>
                <value>
                    <fullName>ALUR</fullName>
                </value>
                <value>
                    <fullName>AMALAPURAM</fullName>
                </value>
                <value>
                    <fullName>AMANGALLU</fullName>
                </value>
                <value>
                    <fullName>AMARPUR</fullName>
                </value>
                <value>
                    <fullName>AMB</fullName>
                </value>
                <value>
                    <fullName>AMBALA</fullName>
                </value>
                <value>
                    <fullName>AMBIKAPUR</fullName>
                </value>
                <value>
                    <fullName>AMOD</fullName>
                </value>
                <value>
                    <fullName>AMRELI</fullName>
                </value>
                <value>
                    <fullName>ANAKAPALLE</fullName>
                </value>
                <value>
                    <fullName>ANAND</fullName>
                </value>
                <value>
                    <fullName>ANANTAPUR</fullName>
                </value>
                <value>
                    <fullName>ANANTNAG</fullName>
                </value>
                <value>
                    <fullName>ANDAMAN ISLAND</fullName>
                </value>
                <value>
                    <fullName>ANDOLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClaimedBy__c</fullName>
        <label>Claimed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimedOn__c</fullName>
        <label>Claimed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Domain__c</fullName>
        <description>User Input: Add comma separated value like test.com,abc.com of client/customer domain(s) for authentictaion work request response</description>
        <inlineHelpText>User Input: Add comma separated value(s) like (test.com,abc.com) of client/customer domain(s) for authentictaion work request response</inlineHelpText>
        <label>Authorised Email Domains</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name_Comms__c</fullName>
        <description>Client Name for Candidate Comms</description>
        <label>Client Name for Comms</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Report_Mail_Ids__c</fullName>
        <label>Client Report Mail Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Report_Password__c</fullName>
        <label>Client Report Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_System__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client System?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complexity_Level__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Touch</fullName>
                </value>
                <value>
                    <fullName>Medium Touch</fullName>
                </value>
                <value>
                    <fullName>SHL 360 Cohort</fullName>
                </value>
                <value>
                    <fullName>SHL 360 One By One</fullName>
                </value>
                <value>
                    <fullName>Light Touch</fullName>
                </value>
                <value>
                    <fullName>AdHoc</fullName>
                </value>
                <value>
                    <fullName>Workaround / System Issue</fullName>
                </value>
                <value>
                    <fullName>Workaround / Product Gap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <label>Contact Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced Contact (Email)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Contact__r.Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoiced Contact (Reg. No)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to SFDC contact field for externally requested jobs.</description>
        <label>Invoiced Contact</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR (3 OR 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Managed Service Commenced, Managed Service Pipeline</value>
            </filterItems>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>General Job, Project Job, OLBRecordType</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>R00N20000000oB2fEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Opportunity__r.Contract.Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Opportunity__r.Contract.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <formula>Opportunity__r.Contract.ContractNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_to_Commenced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Commenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CostCentreNo__c</fullName>
        <label>Cost Centre Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Candidates_DNA__c</fullName>
        <description>It is used to capture count of Candidates with status DNA</description>
        <label>Count of Candidates DNA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Candidates_fail__c</fullName>
        <description>It is used to capture count of Candidates with status Fail</description>
        <label>Count of Candidates Fail</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Candidates_pass__c</fullName>
        <description>It is used to capture count of Candidates with status Pass</description>
        <label>Count of Candidates Pass</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_assessor_required__c</fullName>
        <label>Count of Assessor required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_candidates_invited__c</fullName>
        <description>It is used to capture count of Candidates with status Pass + Fail + DNA</description>
        <label>Count of Candidates Invited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountryOfOrigin__c</fullName>
        <formula>TEXT(Account__r.Irish_Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Of Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_WRF_Visibility__c</fullName>
        <formula>OR( Is_GCSC_Opp__c ,if(Number_of_Participants_New__c=0,true,if( Solution_Cap__c -  Number_of_Participants_New__c &lt;= 0,false,true)))</formula>
        <label>Create WRF Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Query_Reason_2__c</fullName>
        <label>Credit Query Reason 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Query_Reason__c</fullName>
        <inlineHelpText>Enter details if the credit status is Queried</inlineHelpText>
        <label>Credit Query Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Status_2__c</fullName>
        <label>Credit Status 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be credited</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be credited</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SB1 - Bureau operator error</fullName>
                </value>
                <value>
                    <fullName>SB2 - Client order error</fullName>
                </value>
                <value>
                    <fullName>SB3 - Goodwill gesture</fullName>
                </value>
                <value>
                    <fullName>SB4 - Incorrect address</fullName>
                </value>
                <value>
                    <fullName>SB5 - System problems</fullName>
                </value>
                <value>
                    <fullName>SB6 - Candidates withdrawn</fullName>
                </value>
                <value>
                    <fullName>SB7 - Requestor Error</fullName>
                </value>
                <value>
                    <fullName>SB8 - SOE Operator error</fullName>
                </value>
                <value>
                    <fullName>SB9 - Incorrect pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrencyToBeBilled__c</fullName>
        <formula>TEXT(Account__r.CurrencyIsoCode)</formula>
        <label>Currency To Be Billed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_to_be_Billed__c</fullName>
        <label>Currency To Be Billed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Dollar - AUD</fullName>
                </value>
                <value>
                    <fullName>British Pound - GBP</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar - CAD</fullName>
                </value>
                <value>
                    <fullName>Chinese Yuan (CNY)</fullName>
                </value>
                <value>
                    <fullName>Danish Kroner - DKK</fullName>
                </value>
                <value>
                    <fullName>Euro - EUR</fullName>
                </value>
                <value>
                    <fullName>Hong Kong Dollar - HKD</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee - IND</fullName>
                </value>
                <value>
                    <fullName>New Zealand Dollar - NZD</fullName>
                </value>
                <value>
                    <fullName>Norwegian Krone - NOK</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar - SGD</fullName>
                </value>
                <value>
                    <fullName>South African Rand - ZAR</fullName>
                </value>
                <value>
                    <fullName>Swedish Krona - SEK</fullName>
                </value>
                <value>
                    <fullName>Swiss Franc - CHF</fullName>
                </value>
                <value>
                    <fullName>US Dollar - USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <inlineHelpText>Enter the account number (D number)</inlineHelpText>
        <label>D Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_Type__c</fullName>
        <label>Dashboard Type / Tools</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Templated</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                </value>
                <value>
                    <fullName>Full Custom</fullName>
                </value>
                <value>
                    <fullName>Reporting Tool</fullName>
                </value>
                <value>
                    <fullName>IGB</fullName>
                </value>
                <value>
                    <fullName>Dashboard &amp; Reporting Tool</fullName>
                    <isActive>false</isActive>
                    <label>Dashboard &amp; Reporting Tool</label>
                </value>
                <value>
                    <fullName>Tailored</fullName>
                    <isActive>false</isActive>
                    <label>Tailored</label>
                </value>
                <value>
                    <fullName>Tailored Bespoke</fullName>
                    <isActive>false</isActive>
                    <label>Tailored Bespoke</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Database_Reference__c</fullName>
        <description>Bureau job database reference, as generated by the source testing systems</description>
        <label>Database Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_for_Completion__c</fullName>
        <description>This field is requried for Project Configuration on TC Platform</description>
        <label>Days for Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline_Date__c</fullName>
        <description>This field is requried for Project Configuration on TC Platform</description>
        <label>Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <label>Dependencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to capture if Qualtrics Survey needs to be send or not</description>
        <label>Do Not Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drive_Link_Attachment_S3__c</fullName>
        <label>Drive Link/Attachment/S3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drive Link</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dropdown_Client_System__c</fullName>
        <label>Client System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Received__c</fullName>
        <description>to log when a Bureau Job has been received by a client</description>
        <label>Email Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yesterday</fullName>
                </value>
                <value>
                    <fullName>Today</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>